--- a/muscle.html
+++ b/muscle.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <title>Musclevents</title>
 </head>
 <body>
@@ -59,6 +60,20 @@
                 <div id="benefit-3" class="benefit-img"></div>
                 <p>Massa Muscular</p>
             </div>
+        </div>
+    </section>
+    <section class="location">
+        <div class="addres">
+            <i class="bi bi-geo-alt-fill"></i>
+            <div class="addres-details">
+                <p>Rua do evento, 1994</p>
+                <p>Bairro Ponta Verde</p>
+                <p>Abertura do evento 14h</p>
+            </div>
+        </div>
+        <div class="about-location">
+            <h3>Local de destaque</h3>
+            <p>O evento de musculação será realizado em um local de referência para os aficionados por fitness, com uma ampla variedade de equipamentos e espaços dedicados tanto para treinamento indoor quanto outdoor.</p>
         </div>
     </section>
 </body>
