--- a/muscle.html
+++ b/muscle.html
@@ -76,5 +76,49 @@
             <p>O evento de musculação será realizado em um local de referência para os aficionados por fitness, com uma ampla variedade de equipamentos e espaços dedicados tanto para treinamento indoor quanto outdoor.</p>
         </div>
     </section>
+    <section class="details">
+        <div class="detail" id="detail-1">
+            <img src="images/img1.png" alt="gym-muscle">
+            <div class="detail-description">
+                <h3>Explore os espaços onde você fortalece o corpo</h3>
+            </div>
+        </div>
+        <div class="detail" id="detail-2">
+            <div class="detail-description">
+                <h3>Detalhes</h3>
+                <ul>
+                    <li>Detalhes técnicos e estratégias</li>
+                    <li>Posicionamento correto para exercícios</li>
+                    <li>Aproveitamento máximo do espaço disponível</li>
+                    <li>Combinação de diferentes tipos de exercícios para obter melhores resultados</li>
+                    <li>E muito mais..</li>
+                </ul>
+            </div>
+            <img src="images/img2.jpg" alt="gym-muscle">
+        </div>
+        <div class="detail" id="detail-3">
+            <img src="images/img3.jpg" alt="gym-muscle">
+            <div class="detail-description">
+                <h3>Detalhes</h3>
+                <ul>
+                    <li>Demonstração de técnicas e equipamentos inovadores</li>
+                    <li>Discussões com especialistas em musculação</li>
+                    <li>Dicas sobre nutrição e suplementação</li>
+                    <li>Organização e estruturação de um plano de treinamento efetivo</li>
+                    <li>E muito mais..</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="requests-registration">
+        <h3>Gostou? Então se inscreva:</h3>
+        <button class="btn">Solicitar inscrição</button>
+    </section>
+    <footer class="footer">
+        <h3>Musclevents</h3>
+        <p>Eventos de Musculação para Aprender e Crescer</p>
+        <p><span>Entre em contato:</span> oi@musclevents.com.br</p>
+        <p><span>Ou pelo telefone:</span> (55)99999-9999</p>
+    </footer>
 </body>
 </html>
